--- a/package.json
+++ b/package.json
@@ -45,22 +45,19 @@
   "homepage": "https://daquinoaldo.github.io/https-localhost",
   "dependencies": {
     "appdata-path": "^1.0.0",
-    "compression": "^1.7.4",
-    "express": "^4.17.1",
-    "express-minify": "^1.0.0",
-    "spdy": "^4.0.1"
+    "express": "^4.17.1"
   },
   "devDependencies": {
     "coveralls": "^3.0.6",
-    "eslint": "^6.3.0",
+    "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-standard": "^4.0.1",
-    "mocha": "^6.2.0",
+    "mocha": "^6.2.1",
     "nyc": "^14.1.1",
     "pkg": "^4.4.0",
-    "sinon": "^7.4.2"
+    "sinon": "^7.5.0"
   }
 }
